--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
   </head>
   <body>
     <!-- You may want to put your title and additional informaiton here -->
+    <h1>Police shootings</h1>
+    <h2>
+    <div class="col-lg-4">Men Wommen/unspecified</div>
+    <div class="col-lg-4">White 478 328</div>
+    <div class="col-lg-4">non-white 1249 328</div>
+    </h2>
+    <h3></h3>
+    <h4></h4>
+    <h5>This map shows crowdsourced police shooting data form deadspin. Circle color indicates if the victim was hit or killed. Click each point for details.</h5>
     <div class="container">
       <!-- This is the div that your map will go in.  You'll need to reference its id -->
       <div id="container"></div>
@@ -30,7 +39,7 @@
     <script>
       
       // This is where you should execute your drawMap function
-      
+      drawMap();
     </script>
   </body>
 </html>
