--- a/index.html
+++ b/index.html
@@ -23,21 +23,35 @@
   </head>
   <body>
     <!-- You may want to put your title and additional informaiton here -->
-    <h1>Police shootings</h1>
-    <h2>
-    <div class="col-lg-4">Men Wommen/unspecified</div>
-    <div class="col-lg-4">White 478 328</div>
-    <div class="col-lg-4">non-white 1249 328</div>
-    </h2>
-    <h3></h3>
-    <h4></h4>
-    <h5>This map shows crowdsourced police shooting data form deadspin. Circle color indicates if the victim was hit or killed. Click each point for details.</h5>
+    <h1><p class="text-center">Police shootings</p></h1>
+    <div class="container">
+      <div class="row">
+
+        <table class="table">
+          <tr>
+            <td></td>
+            <td><strong>Men</strong></td>    
+            <td><strong>Women/unspecified</strong></td>
+          </tr>
+          <tr class="info">
+            <td><strong>White</strong></td>
+            <td id="p1"><script></script></td>    
+            <td id="p2"></td>
+          </tr>
+          <tr>
+            <td><strong>Non-White</strong></td>
+            <td id="p3"></td>    
+            <td id="p4"></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <p>This map shows crowdsourced police shooting data form <a href="http://regressing.deadspin.com/deadspin-police-shooting-database-update-were-still-go-1627414202">deadspin</a>. Circle color indicates if the victim was <b>hit</b> or <font color="red"><b>killed</b></font>. Click each point for details.</p>
     <div class="container">
       <!-- This is the div that your map will go in.  You'll need to reference its id -->
       <div id="container"></div>
     </div>
     <script>
-      
       // This is where you should execute your drawMap function
       drawMap();
     </script>
